--- a/NewsPaper/templates/news.html
+++ b/NewsPaper/templates/news.html
@@ -2,15 +2,23 @@
 
 {% load custom_filters %}
 
+{% load custom_tags %}
+
 {% block title %}
 Post
 {% endblock title %}
 
 {% block content %}
 <h1> Все новости </h1>
+
+ <form action="" method="get">
+     {{ filterset.form.as_p }}
+     <input type="submit" value="Найти" />
+   </form>
+
+
 <h3>{{ time_now|date:'M d Y' }}</h3>
-<h3>Количество всех новостей {{ posts|length }}</h3>
-<h3> {{ next_news|default_if_none:"Чуть позже сообщим о новостях!" }} </h3>
+
 
 {% if posts %}
 <table>
@@ -30,4 +38,23 @@ Post
 {% else %}
         <h2>Новостей нет!</h2>
 {% endif %}
+
+{% if page_obj.has_previous %}
+       <a href="?{% url_replace page=1 %}">1</a>
+       {% if page_obj.previous_page_number != 1 %}
+           ...
+           <a href="?page={{ page_obj.previous_page_number }}">{{ page_obj.previous_page_number }}</a>
+       {% endif %}
+   {% endif %}
+
+   {{ page_obj.number }}
+
+   {% if page_obj.has_next %}
+       <a href="?page={{ page_obj.next_page_number }}">{{ page_obj.next_page_number }}</a>
+       {% if paginator.num_pages != page_obj.next_page_number %}
+           ...
+           <a href="?page={{ page_obj.paginator.num_pages }}">{{ page_obj.paginator.num_pages }}</a>
+       {% endif %}
+   {% endif %}
+
 {% endblock content %}
